tests/snapshots/regression/recovery__059_parser_error_recovery.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/059_parser_error_recovery.flx
exit_code: 1

Error[E030]: Unknown Keyword

Unknown keyword `def`. Flux uses `fn` for function declarations.

  tests/fixtures/recovery/059_parser_error_recovery.flx:1:1
  |
1 | def foo() { 1 }
  | ^^^

Hint:
  Did you mean `fn`?


Error[E034]: Missing Hash Colon

This hash entry needs `:` between the key and value.

  tests/fixtures/recovery/059_parser_error_recovery.flx:1:15
  |
1 | def foo() { 1 }
  |               ^

Hint:
  Hash literals use `{key: value, ...}`.

Note:
  Suppressed 2 cascading parser diagnostic(s) likely caused by an earlier syntax error.

Found 2 errors.
